<resources>
    <string name="app_name" translatable="false">老友记</string>
    <!-- 自定义字符串 -->
    <string name="yms" translatable="false">医麦思</string>
    <string name="today" translatable="false">今天</string>
    <string name="yesterday" translatable="false">昨天</string>
    <string name="language" translatable="false">语言</string>
    <string name="loginin" translatable="false">登录</string>
    <string name="register" translatable="false">注册</string>
    <string name="test_title" translatable="false">测试标题</string>
    <string name="test_item" translatable="false">测试ITEM</string>
    <string name="save" translatable="false">保存</string>
    <string name="more_language" translatable="false">多语言</string>
    <string name="auto" translatable="false">跟随系统</string>
    <string name="chinese_simple" translatable="false">中文简体</string>
    <string name="english" translatable="false">English</string>
    <string name="progress" translatable="false">进度条</string>
    <string name="provider" translatable="false">提供者</string>
    <string name="content_hint" translatable="false">这里是内容区域. </string>
    <string name="add" translatable="false">增加</string>
    <string name="del" translatable="false">删除</string>
    <string name="query" translatable="false">查询</string>
    <string name="update" translatable="false">修改</string>
    <string name="login_with_phone" translatable="false">使用手机号登录</string>
    <string name="country_area" translatable="false">国家/地区</string>
    <string name="phone_hint" translatable="false">+86</string>
    <string name="password_hint" translatable="false">密码</string>
    <string name="input_phone_hint" translatable="false">你的手机号码</string>
    <string name="input_psd_hint" translatable="false">填写密码</string>
    <string name="loading" translatable="false">加载中</string>


</resources>
