<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_white"
    >

    <include
        android:id="@+id/pll_title_bar_root"
        layout="@layout/title_bar_style_three"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/yms_dimens_128.0_px"
        android:paddingLeft="@dimen/yms_dimens_25.0_px"
        android:paddingRight="@dimen/yms_dimens_25.0_px"
        android:paddingTop="@dimen/yms_dimens_35.0_px"
        >
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/yms_dimens_20.0_px"
            android:paddingRight="@dimen/yms_dimens_20.0_px"
            android:clickable="true"
            android:background="@drawable/selector_item_pressed"
            >
            <TextView
                android:id="@+id/tv_country_area_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="@dimen/yms_font_30_px"
                android:textColor="@color/color_212121"
                android:text="@string/country_area"/>

            <TextView
                android:id="@+id/tv_country_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:layout_toRightOf="@+id/tv_country_area_hint"
                android:textColor="@color/color_bg_green_normal"
                android:maxLines="2"
                android:text="北京"
                android:textSize="@dimen/yms_font_30_px"/>

        </RelativeLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/yms_dimens_1.0_px"
        android:layout_marginLeft="@dimen/yms_dimens_25.0_px"
        android:layout_marginRight="@dimen/yms_dimens_25.0_px"
        android:background="@color/color_dadada"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/yms_dimens_96.0_px"
        android:paddingLeft="@dimen/yms_dimens_46.0_px"
        android:paddingRight="@dimen/yms_dimens_25.0_px"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/yms_dimens_20.0_px"

            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/tv_phone_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="@dimen/yms_font_30_px"
                android:textColor="@color/color_212121"
                android:text="@string/phone_hint"/>

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/color_white"
                android:layout_marginLeft="@dimen/yms_dimens_95.0_px"
                android:inputType="phone"
                android:maxLines="1"
                android:maxLength="20"
                android:hint="@string/input_phone_hint"
                android:textSize="@dimen/yms_font_30_px"
                android:textColorHint="@color/color_dedede"
                />

            <LinearLayout
                android:id="@+id/ll_input_phone_clear"
                android:layout_width="@dimen/yms_dimens_96.0_px"
                android:layout_height="@dimen/yms_dimens_96.0_px"
                android:visibility="invisible"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="@dimen/yms_dimens_32.0_px"
                    android:layout_height="@dimen/yms_dimens_32.0_px"
                    android:src="@drawable/selector_input_clear"/>
            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>

    <View
        android:id="@+id/view_phone_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/yms_dimens_1.0_px"
        android:layout_marginLeft="@dimen/yms_dimens_25.0_px"
        android:layout_marginRight="@dimen/yms_dimens_25.0_px"
        android:background="@color/color_dadada"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/yms_dimens_96.0_px"
        android:paddingLeft="@dimen/yms_dimens_25.0_px"
        android:paddingRight="@dimen/yms_dimens_25.0_px"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/yms_dimens_20.0_px"

            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/tv_psd_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="@dimen/yms_font_30_px"
                android:textColor="@color/color_212121"
                android:text="@string/password_hint"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/color_white"
                android:layout_marginLeft="@dimen/yms_dimens_116.0_px"
                android:inputType="textPassword"
                android:maxLines="1"
                android:maxLength="16"
                android:hint="@string/input_psd_hint"
                android:textSize="@dimen/yms_font_30_px"
                android:textColorHint="@color/color_dedede"
                />

            <LinearLayout
                android:id="@+id/ll_input_psd_clear"
                android:layout_width="@dimen/yms_dimens_96.0_px"
                android:layout_height="@dimen/yms_dimens_96.0_px"
                android:visibility="invisible"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="@dimen/yms_dimens_32.0_px"
                    android:layout_height="@dimen/yms_dimens_32.0_px"
                    android:src="@drawable/selector_input_clear"/>
            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>

    <View
        android:id="@+id/view_psd_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/yms_dimens_1.0_px"
        android:layout_marginLeft="@dimen/yms_dimens_25.0_px"
        android:layout_marginRight="@dimen/yms_dimens_25.0_px"
        android:background="@color/color_dadada"/>
    
    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/yms_dimens_96.0_px"
        android:layout_marginTop="@dimen/yms_dimens_48.0_px"
        android:layout_marginLeft="@dimen/yms_dimens_25.0_px"
        android:layout_marginRight="@dimen/yms_dimens_25.0_px"
        android:background="@drawable/selector_shape_green_8px"
        android:text="@string/loginin"
        android:textColor="@color/selector_color_white"
        android:textSize="@dimen/yms_font_34_px"
        android:enabled="false"
        android:onClick="onLogin"
        />









</LinearLayout>